# nc_particles

./: .gitignore  README.md  index.md  nc_particle_standard.md
python_implementation/: README.md  conda_requirements.txt  conda_requirements_dev.txt  pyproject.toml  setup.py
python_implementation/examples/: .gitignore  boston_example.ipynb  boston_trajectory.nc  build_example.py
python_implementation/experiments/: make_rect.py
python_implementation/nc_particles/: __init__.py  nc_particles.py  setup.py
python_implementation/nc_particles/tests/: test_nc_particles.py  test_reader.py  test_writer.py
python_implementation/nc_particles/tests/output/: readme.txt
python_implementation/src/nc_particles/: __init__.py  nc_particles.py  particles.py
python_implementation/src/nc_particles/ragged/: NotesOnRagged.md  ragged_test.py
python_implementation/src/nc_particles/tests/: junk_file.nc  test_nc_particles.py  test_particles.py  test_writer.py
python_implementation/src/nc_particles/tests/sample_data/: sample.cdl
python_implementation/src/nc_particles/tests/temp_output/: README.txt
